@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020191016"
-#define public MagickPackageReleaseDate "snapshot-20191016"
+#define public MagickPackageVersionAddendum ".020191019"
+#define public MagickPackageReleaseDate "snapshot-20191019"
